// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrackVisibility /> When rendering the component Can be rendered without children 1`] = `
<TrackVisibility
  className={null}
  nodeRef={null}
  offset={0}
  once={false}
  partialVisibility={false}
  style={null}
  tag="div"
  throttleInterval={150}
>
  <div />
</TrackVisibility>
`;

exports[`<TrackVisibility /> When rendering the component Should be able to use a render props 1`] = `
<TrackVisibility
  className={null}
  nodeRef={null}
  offset={0}
  once={false}
  partialVisibility={false}
  style={null}
  tag="div"
  throttleInterval={150}
>
  <div>
    <Dumb>
      <div>
        Plop
      </div>
    </Dumb>
  </div>
</TrackVisibility>
`;

exports[`<TrackVisibility /> When rendering the component Should fallback clientHeight when window propeties are not defined 1`] = `
<TrackVisibility
  className={null}
  nodeRef={null}
  offset={0}
  once={false}
  partialVisibility={false}
  style={null}
  tag="div"
  throttleInterval={150}
>
  <div />
</TrackVisibility>
`;

exports[`<TrackVisibility /> when partially visible Can check partial visibilty 1`] = `
<TrackVisibility
  className={null}
  nodeRef={null}
  offset={0}
  once={false}
  partialVisibility={true}
  style={null}
  tag="div"
  throttleInterval={150}
>
  <div />
</TrackVisibility>
`;
